🩹 Update alias paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,15 +34,10 @@
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@/*": ["src/*"],
-      "@/atoms/*": ["src/components/atoms/*"],
-      "@/molecules/*": ["src/components/molecules/*"],
-      "@/organisms/*": ["src/components/organisms/*"],
-      "@/templates/*": ["src/components/templates/*"],
       "@/pages/*": ["src/pages/*"],
-      "@/styles/*": ["src/styles/*"],
+      "@/components/*": ["src/components/*"],
       "@/utils/*": ["src/utils/*"],
       "@/hooks/*": ["src/hooks/*"],
-      "@/assets/*": ["src/assets/*"],
       /* Specify a set of entries that re-map imports to additional lookup locations. */
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
